new code add all css and html code

--- a/index.html
+++ b/index.html
@@ -27,10 +27,21 @@
             <div><h1 class="raleway-normal">Cool Daek UI Tamplate  for <br> Wabflow Agencies! <br>
             <button class="btn-first">Stay Focused</button></h1>
             </div>
-               
          </nav>
     </header>
     <main>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">See It in Action</h1>
+                <p class="banner-description">Explore the live preview and imagine <br> your brand in this bold new look</p>
+                <button class="btn-primary">Launch Live Preview</button>
+              
+            </div>
+             <div>
+                <br> 
+                <img class="baner-profile-pic" src="Assets/wc-mini.png" alt="">
+             </div>
+        </div>
       <article>
 
       </article>
