--- a/index.html
+++ b/index.html
@@ -42,7 +42,29 @@
                 <img class="baner-profile-pic" src="Assets/wc-mini.png" alt="">
              </div>
         </div>
+        <div class="header-content">
+            <h1 class="user">Joined Thousands of Productive Users</h1>
+            <div class="div-item">
+                <div>
+                <h1 class="same-color">50k</h1>
+                <h5>Active user</h5>
+            </div>
+            <div>
+                 <h1 class="same-color">2M+</h1>
+                 <h5>Focus Sessions</h5>
+            </div>
+            <div>
+               <h1 class="same-color">95%</h1>
+               <h5>Satisfaction Rate</h5>
+            </div>
+            </div>
+        </div>
       <article>
+           <header>
+            <section>
+                
+            </section>
+           </header>
 
       </article>
     </main>
