--- a/index.html
+++ b/index.html
@@ -60,12 +60,50 @@
             </div>
         </div>
       <article>
-           <header>
             <section>
-                
+               <div class="skill-container">
+                 <div class="skill">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h2>Loved by Designers</h2>
+                    <p><small>This template instantly leveled up <br> our presence.”  Studio Vertex</small></p>
+                    <img src="Assets/avatar.png" alt="">
+                    <h6>Reviewer name <br>Date</h6>
+                </div>
+                <div class="skill">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h2>Loved by Designers</h2>
+                    <p> <small>This template instantly leveled up <br>our presence.” Studio Vertex<small></p>
+                    <img src="Assets/avatar.png" alt="">
+                    <h6>Reviewer name <br>Date</h6>
+                </div> 
+                <div class="skill">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h2>Loved by Designers</h2>
+                    <p class="li-1">This template instantly leveled up <br> our presence.” Studio Vertex</p>
+                    <img src="Assets/avatar.png" alt="">
+                    <h6 id="inline-paragarap">Reviewer name <br>Date</h6>
+                </div> 
+               </div>
             </section>
-           </header>
-
+            <div class="content-1">
+                <div>
+                    <h1 class="user-1" >Ready to focus better <br></h1>
+                    <p class="user-2"><small>This template instantly leveled up our presence.” - Studio Vertex</small></p>
+                    <img class="bg-1" src="Assets/wc-big.png" alt="">
+                </div>
+            </div>
       </article>
     </main>
     <footer>
