all new item add

--- a/index.html
+++ b/index.html
@@ -100,11 +100,29 @@
             <div class="content-1">
                 <div>
                     <h1 class="user-1" >Ready to focus better <br></h1>
-                    <p class="user-2"><small>This template instantly leveled up our presence.” - Studio Vertex</small></p>
+                    <p class="user-2">This template instantly leveled up our presence.” - Studio Vertex</p>           
+                     <button class="center">Ger Started Free</button>               
                     <img class="bg-1" src="Assets/wc-big.png" alt="">
                 </div>
             </div>
       </article>
+      <section>
+        <div class="touch-button">
+            <div class="main-2">
+                <h1>Let’s Get in <br> Touch</h1>
+            </div>
+            <div class="main-holder">
+               <h4>Email</h4>
+               <input placeholder="example@email.com" type="email" name="email" id="">
+               <h4>name</h4>
+               <input placeholder="full name" type="name" name="name" id="">
+               <h4>Message</h4>
+               <input class="message-1" placeholder="write your message...." type="Message" name="message" id=""> <br> 
+               <br>
+               <button  class="button-4">Get in Touch</button>
+            </div>
+        </div>
+      </section>
     </main>
     <footer>
 
