new all item add

--- a/index.html
+++ b/index.html
@@ -125,7 +125,16 @@
       </section>
     </main>
     <footer>
-
+        <section class="about secondary-bg">
+            <h1 class="section-title">LOGO</h1>
+            <p class=""section-description>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="about-items">
+             <div class="about-item"> <button>Home</button></div>
+            <div class="about-item"><button>About</button> </div>
+             <div class="about-item"> <button>How it Works</button></div>
+             <div class="about-item"> <button>Services</button></div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
